@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-08
+2014-02-14 Andy Salnikov
+- DataSet/isFileName() did not classify /dev/null as file name
+
 Tag: V00-01-07
 2013-11-21 Andy Salnikov
 - Dataset::files(): when searching for files check file type only after
